Fix z-index issue with stickyVoteButtons
Fixes #492.

--- a/sox.css
+++ b/sox.css
@@ -705,6 +705,10 @@
 }
 
 /* stickyVoteButtons -- for the vote buttons on the left of the post */
+.sox-stickyVoteButtons {
+    z-index: 2;
+}
+
 .sox-stickyVoteButtons > .js-voting-container {
     position: -webkit-sticky;
     position: sticky;
